<resources>
    <string name="app_name">Discover Batik</string>

    <!--    Landing -->
    <string name="heading_landing">Discovering The Beauty Of Batik\nFind The Story Of Indonesia</string>
    <string name="description_landing">Lorem Ipsum is simply dummy text of the printing\nand typesetting industry. Lorem Ipsum</string>

    <!--    Register & Login -->
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="already_have_account">already have account?</string>
    <string name="not_have_account">not have account?</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!--    Register -->
    <string name="create_new_account">Create new account</string>
    <string name="welcome_back_buddy">Welcome back buddy</string>
    <string name="description1">Username cannot use numbers</string>
    <string name="description2">Enter a valid email</string>
    <string name="description3">Password must be more than 8 character</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="card_home_1_text">Find Batik\\nPattern</string>

    <!--    Home -->
    <string name="card_home1">Find Batik\nPattern</string>
    <string name="card_home2">My Shopping\nBag</string>

    <!--    Shop -->
    <string name="shop_name1">Rumah Batik Jogja</string>
    <string name="shop_name2">Batik House Bandung</string>
    <string name="shop_name3">Old House</string>

    <string name="shop_location1">Yogyakarta, Indonesia</string>
    <string name="shop_location2">Bandung, Indonesia</string>
    <string name="shop_location3">Bali, Indonesia</string>

    <string name="shop_description1">Clothes, pants, fabric, other stuff</string>
    <string name="shop_description2">fabric, other stuff</string>
    <string name="shop_description3">Clother, other stuff</string>

    <string-array name="list_item_category_name">
        <item>All</item>
        <item>Popular</item>
        <item>Shop</item>
        <item>T-shirt</item>
        <item>Pants</item>
        <item>Fabric</item>
    </string-array>

    <string name="lorem_ipsum">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using</string>

    <!--    Api Google Map -->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAA5w6YUEKwOc6FPtB5xVezEolux92SIec</string>

</resources>